deploy: QuantumPL/site@c54eed012ef972ec9eeb8f46bed179d48255333a

--- a/publication/index.html
+++ b/publication/index.html
@@ -226,6 +226,36 @@ DOI
 </div>
 </div>
 </div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-7 year-2022">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Hietala2022/>A Verified Software Toolchain For Quantum Programming</a>
+</div>
+<a href=/bib/publication/Hietala2022/ class=summary-link>
+<div class=article-style>
+Quantum computing is steadily moving from theory into practice, with small-scale quantum computers available for public use. Now …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Kesha-Hietala/>Kesha Hietala</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://khieta.github.io/files/dissertation.pdf target=_blank rel=noopener>
+PDF
+</a>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Hietala2022/cite.bib>
+Cite
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
 <div class="grid-sizer col-lg-12 isotope-item pubtype-1 year-2022">
 <div class="media stream-item">
 <div class=media-body>
