--- a/404.html
+++ b/404.html
@@ -125,6 +125,7 @@
 <ul>
 <li><a href=/bib/publication/Ittah2022/>QIRO: A Static Single Assignment-Based Quantum Program Representation for Optimization</a></li>
 <li><a href=/bib/publication/>Publications</a></li>
+<li><a href=/bib/publication/Hietala2022/>A Verified Software Toolchain For Quantum Programming</a></li>
 <li><a href=/bib/publication/Singhal2022/>Q# as a Quantum Algorithmic Language</a></li>
 <li><a href=/bib/event/>Recent & Upcoming Events</a></li>
 <li><a href=/bib/event/pldi22-sigplan/>Quantum at the SIGPLAN Track at PLDI 2022</a></li>
@@ -132,7 +133,6 @@
 <li><a href=/bib/publication/Xu2022/>Quartz: Superoptimization of Quantum Circuits</a></li>
 <li><a href=/bib/publication/Tao2022/>Giallar: Push-Button Verification for the Qiskit Quantum Compiler</a></li>
 <li><a href=/bib/publication/Peng2022/>Algebraic Reasoning of Quantum Programs via Non-Idempotent Kleene Algebra</a></li>
-<li><a href=/bib/publication/Ying2022/>Birkhoff-von Neumann Quantum Logic as an Assertion Language for Quantum Programs</a></li>
 </ul>
 </div>
 </div>
