--- a/index.html
+++ b/index.html
@@ -179,6 +179,23 @@ DOI
 <i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author">
 <span>
+<a href=/bib/author/Kesha-Hietala/>Kesha Hietala</a></span>
+</span>
+(2022).
+<a href=/bib/publication/Hietala2022/>A Verified Software Toolchain For Quantum Programming</a>.
+<p>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://khieta.github.io/files/dissertation.pdf target=_blank rel=noopener>
+PDF
+</a>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Hietala2022/cite.bib>
+Cite
+</a>
+</p>
+</div>
+<div class=pub-list-item style=margin-bottom:1rem>
+<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author">
+<span>
 <a href=/bib/author/Kartik-Singhal/>Kartik Singhal</a></span>, <span>
 <a href=/bib/author/Kesha-Hietala/>Kesha Hietala</a></span>, <span>
 <a href=/bib/author/Sarah-Marshall/>Sarah Marshall</a></span>, <span>
@@ -196,57 +213,6 @@ arXiv
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://ks.cs.uchicago.edu/publication/q-algol/ target=_blank rel=noopener>
 URL
-</a>
-</p>
-</div>
-<div class=pub-list-item style=margin-bottom:1rem>
-<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
-<span class="article-metadata li-cite-author">
-<span>
-<a href=/bib/author/Yuxiang-Peng/>Yuxiang Peng</a></span>, <span>
-<a href=/bib/author/Mingsheng-Ying/>Mingsheng Ying</a></span>, <span>
-<a href=/bib/author/Xiaodi-Wu/>Xiaodi Wu</a></span>
-</span>
-(2022).
-<a href=/bib/publication/Peng2022/>Algebraic Reasoning of Quantum Programs via Non-Idempotent Kleene Algebra</a>.
-<em>Proceedings of the 43rd ACM SIGPLAN International Conference on Programming Language Design and Implementation</em>.
-<p>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Peng2022/cite.bib>
-Cite
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3519939.3523713 target=_blank rel=noopener>
-DOI
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2110.07018 target=_blank rel=noopener>
-arXiv
-</a>
-</p>
-</div>
-<div class=pub-list-item style=margin-bottom:1rem>
-<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
-<span class="article-metadata li-cite-author">
-<span>
-<a href=/bib/author/Runzhou-Tao/>Runzhou Tao</a></span>, <span>
-<a href=/bib/author/Yunong-Shi/>Yunong Shi</a></span>, <span>
-<a href=/bib/author/Jianan-Yao/>Jianan Yao</a></span>, <span>
-<a href=/bib/author/Xupeng-Li/>Xupeng Li</a></span>, <span>
-<a href=/bib/author/Ali-Javadi-Abhari/>Ali Javadi-Abhari</a></span>, <span>
-<a href=/bib/author/Andrew-W.-Cross/>Andrew W. Cross</a></span>, <span>
-<a href=/bib/author/Frederic-T.-Chong/>Frederic T. Chong</a></span>, <span>
-<a href=/bib/author/Ronghui-Gu/>Ronghui Gu</a></span>
-</span>
-(2022).
-<a href=/bib/publication/Tao2022/>Giallar: Push-Button Verification for the Qiskit Quantum Compiler</a>.
-<em>Proceedings of the 43rd ACM SIGPLAN International Conference on Programming Language Design and Implementation</em>.
-<p>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Tao2022/cite.bib>
-Cite
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3519939.3523431 target=_blank rel=noopener>
-DOI
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2205.00661 target=_blank rel=noopener>
-arXiv
 </a>
 </p>
 </div>
@@ -284,6 +250,29 @@ arXiv
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/quantum-compiler/quartz target=_blank rel=noopener>
 URL
+</a>
+</p>
+</div>
+<div class=pub-list-item style=margin-bottom:1rem>
+<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author">
+<span>
+<a href=/bib/author/Yuxiang-Peng/>Yuxiang Peng</a></span>, <span>
+<a href=/bib/author/Mingsheng-Ying/>Mingsheng Ying</a></span>, <span>
+<a href=/bib/author/Xiaodi-Wu/>Xiaodi Wu</a></span>
+</span>
+(2022).
+<a href=/bib/publication/Peng2022/>Algebraic Reasoning of Quantum Programs via Non-Idempotent Kleene Algebra</a>.
+<em>Proceedings of the 43rd ACM SIGPLAN International Conference on Programming Language Design and Implementation</em>.
+<p>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Peng2022/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3519939.3523713 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2110.07018 target=_blank rel=noopener>
+arXiv
 </a>
 </p>
 </div>
