--- a/publication/Svore2018/index.html
+++ b/publication/Svore2018/index.html
@@ -187,15 +187,16 @@ Conference paper
 <a class="badge badge-light" href=/bib/tag/domain-specific-language/>domain specific language</a>
 <a class="badge badge-light" href=/bib/tag/functional-programming/>functional programming</a>
 <a class="badge badge-light" href=/bib/tag/quantum-computing/>quantum computing</a>
+<a class="badge badge-light" href=/bib/tag/q/>q#</a>
 </div>
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
-<li><a href=/bib/publication/Mosca2019/>Quantum Programming Languages (Dagstuhl Seminar 18381)</a></li>
-<li><a href=/bib/publication/Altenkirch2005/>A Functional Quantum Programming Language</a></li>
 <li><a href=/bib/publication/Singhal2022/>Q# as a Quantum Algorithmic Language</a></li>
+<li><a href=/bib/publication/Mosca2019/>Quantum Programming Languages (Dagstuhl Seminar 18381)</a></li>
+<li><a href=/bib/publication/Singhal2021/>Toward a Type-Theoretic Interpretation of Q# and Statically Enforcing the No-Cloning Theorem</a></li>
+<li><a href=/bib/publication/Altenkirch2005/>A Functional Quantum Programming Language</a></li>
 <li><a href=/bib/publication/Tao2022/>Giallar: Push-Button Verification for the Qiskit Quantum Compiler</a></li>
-<li><a href=/bib/publication/Xu2022/>Quartz: Superoptimization of Quantum Circuits</a></li>
 </ul>
 </div>
 </div>
