deploy: QuantumPL/site@aec5706f71158981b027532db907f9a97b60bf04

--- a/publication/Heim2020/index.html
+++ b/publication/Heim2020/index.html
@@ -162,6 +162,22 @@ Thesis
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
 <div class=article-style></div>
+<div class=article-tags>
+<a class="badge badge-light" href=/bib/tag/programming-languages/>programming languages</a>
+<a class="badge badge-light" href=/bib/tag/quantum-programming/>quantum programming</a>
+<a class="badge badge-light" href=/bib/tag/quantum-computing/>quantum computing</a>
+<a class="badge badge-light" href=/bib/tag/q/>q#</a>
+</div>
+<div class="article-widget content-widget-hr">
+<h3>Related</h3>
+<ul>
+<li><a href=/bib/publication/Singhal2022/>Q# as a Quantum Algorithmic Language</a></li>
+<li><a href=/bib/publication/Singhal2021/>Toward a Type-Theoretic Interpretation of Q# and Statically Enforcing the No-Cloning Theorem</a></li>
+<li><a href=/bib/publication/Singhal2021a/>Quantum Hoare Type Theory: Extended Abstract</a></li>
+<li><a href=/bib/publication/Svore2018/>Q#: Enabling Scalable Quantum Computing and Development with a High-Level DSL</a></li>
+<li><a href=/bib/publication/Singhal2020/>Verified translation between low-level quantum languages</a></li>
+</ul>
+</div>
 </div>
 </div>
 </div>
