--- a/publication/Xu2022/index.html
+++ b/publication/Xu2022/index.html
@@ -200,8 +200,8 @@ Conference paper
 <li><a href=/bib/publication/Singhal2022/>Q# as a Quantum Algorithmic Language</a></li>
 <li><a href=/bib/publication/Tao2022/>Giallar: Push-Button Verification for the Qiskit Quantum Compiler</a></li>
 <li><a href=/bib/publication/Le2022/>A Quantum Interpretation of Separating Conjunction for Local Reasoning of Quantum Programs Based on Separation Logic</a></li>
+<li><a href=/bib/publication/Cross2021/>OpenQASM 3: A Broader and Deeper Quantum Assembly Language</a></li>
 <li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
-<li><a href=/bib/publication/Rand2021/>Gottesman Types for Quantum Programs</a></li>
 </ul>
 </div>
 </div>
