--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -158,6 +158,12 @@ Quantum programming languages enable developers to implement algorithms for quan
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/Cross2021/>OpenQASM 3: A Broader and Deeper Quantum Assembly Language</a></h2>
+<div class=article-style>
+Quantum assembly languages are machine-independent languages that traditionally describe quantum computation in the circuit model. Open quantum assembly language (OpenQASM 2) was proposed as an imperative programming language for quantum circuits …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Feng2021/>Quantum Hoare Logic with Classical Variables</a></h2>
 <div class=article-style>
 Hoare logic provides a syntax-oriented method to reason about program correctness and has been proven effective in the verification of classical and probabilistic programs. Existing proposals for quantum Hoare logic either lack completeness or …
