--- a/publication/Amy2019b/index.html
+++ b/publication/Amy2019b/index.html
@@ -183,9 +183,9 @@ Conference paper
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/bib/publication/Cross2021/>OpenQASM 3: A Broader and Deeper Quantum Assembly Language</a></li>
 <li><a href=/bib/publication/Singhal2020/>Verified translation between low-level quantum languages</a></li>
 <li><a href=/bib/publication/Cross2017/>Open Quantum Assembly Language</a></li>
-<li><a href=/bib/publication/Cross2021/>OpenQASM 3: A broader and deeper quantum assembly language</a></li>
 <li><a href=/bib/publication/Yuan2022/>Twist: Sound Reasoning for Purity and Entanglement in Quantum Programs</a></li>
 <li><a href=/bib/publication/Feng2021/>Quantum Hoare Logic with Classical Variables</a></li>
 </ul>
