--- a/publication/Li2020/index.html
+++ b/publication/Li2020/index.html
@@ -185,11 +185,11 @@ Journal article
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/bib/publication/Heim2020/>Development of Quantum Applications</a></li>
 <li><a href=/bib/publication/McCaskey2021/>Extending C++ for Heterogeneous Quantum-Classical Computing</a></li>
 <li><a href=/bib/publication/Singhal2022/>Q# as a Quantum Algorithmic Language</a></li>
 <li><a href=/bib/publication/Tao2022/>Giallar: Push-Button Verification for the Qiskit Quantum Compiler</a></li>
 <li><a href=/bib/publication/Xu2022/>Quartz: Superoptimization of Quantum Circuits</a></li>
-<li><a href=/bib/publication/Le2022/>A Quantum Interpretation of Separating Conjunction for Local Reasoning of Quantum Programs Based on Separation Logic</a></li>
 </ul>
 </div>
 </div>
