--- a/publication/McCaskey2021/index.html
+++ b/publication/McCaskey2021/index.html
@@ -189,9 +189,9 @@ Journal article
 <ul>
 <li><a href=/bib/publication/Mosca2019/>Quantum Programming Languages (Dagstuhl Seminar 18381)</a></li>
 <li><a href=/bib/publication/Li2020/>Projection-Based Runtime Assertions for Testing and Debugging Quantum Programs</a></li>
+<li><a href=/bib/publication/Heim2020/>Development of Quantum Applications</a></li>
 <li><a href=/bib/publication/Singhal2022/>Q# as a Quantum Algorithmic Language</a></li>
 <li><a href=/bib/publication/Tao2022/>Giallar: Push-Button Verification for the Qiskit Quantum Compiler</a></li>
-<li><a href=/bib/publication/Xu2022/>Quartz: Superoptimization of Quantum Circuits</a></li>
 </ul>
 </div>
 </div>
