--- a/publication/Singhal2022/index.html
+++ b/publication/Singhal2022/index.html
@@ -194,8 +194,8 @@ Conference paper
 <li><a href=/bib/publication/Singhal2021/>Toward a Type-Theoretic Interpretation of Q# and Statically Enforcing the No-Cloning Theorem</a></li>
 <li><a href=/bib/publication/Singhal2020a/>Quantum Hoare Type Theory</a></li>
 <li><a href=/bib/publication/Singhal2021a/>Quantum Hoare Type Theory: Extended Abstract</a></li>
+<li><a href=/bib/publication/Heim2020/>Development of Quantum Applications</a></li>
 <li><a href=/bib/publication/Rand2021/>Gottesman Types for Quantum Programs</a></li>
-<li><a href=/bib/publication/Ying2012/>Floyd--Hoare Logic for Quantum Programs</a></li>
 </ul>
 </div>
 </div>
