--- a/publication/Svore2006/index.html
+++ b/publication/Svore2006/index.html
@@ -192,7 +192,7 @@ Journal article
 <li><a href=/bib/publication/Singhal2021a/>Quantum Hoare Type Theory: Extended Abstract</a></li>
 <li><a href=/bib/publication/Singhal2020/>Verified translation between low-level quantum languages</a></li>
 <li><a href=/bib/publication/Hietala2021/>A Verified Optimizer for Quantum Circuits</a></li>
-<li><a href=/bib/publication/Singhal2021/>Toward a Type-Theoretic Interpretation of Q# and Statically Enforcing the No-Cloning Theorem</a></li>
+<li><a href=/bib/publication/Heim2020/>Development of Quantum Applications</a></li>
 </ul>
 </div>
 </div>
