--- a/publication/index.html
+++ b/publication/index.html
@@ -823,6 +823,52 @@ arXiv
 </div>
 </div>
 </div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2021">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Cross2021/>OpenQASM 3: A Broader and Deeper Quantum Assembly Language</a>
+</div>
+<a href=/bib/publication/Cross2021/ class=summary-link>
+<div class=article-style>
+Quantum assembly languages are machine-independent languages that traditionally describe quantum computation in the circuit model. Open …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Andrew-W.-Cross/>Andrew W. Cross</a></span>, <span>
+<a href=/bib/author/Ali-Javadi-Abhari/>Ali Javadi-Abhari</a></span>, <span>
+<a href=/bib/author/Thomas-Alexander/>Thomas Alexander</a></span>, <span>
+<a href=/bib/author/Niel-de-Beaudrap/>Niel de Beaudrap</a></span>, <span>
+<a href=/bib/author/Lev-S.-Bishop/>Lev S. Bishop</a></span>, <span>
+<a href=/bib/author/Steven-Heidel/>Steven Heidel</a></span>, <span>
+<a href=/bib/author/Colm-A.-Ryan/>Colm A. Ryan</a></span>, <span>
+<a href=/bib/author/Prasahnt-Sivarajah/>Prasahnt Sivarajah</a></span>, <span>
+<a href=/bib/author/John-Smolin/>John Smolin</a></span>, <span>
+<a href=/bib/author/Jay-M.-Gambetta/>Jay M. Gambetta</a></span>, <span>
+<a href=/bib/author/Blake-R.-Johnson/>Blake R. Johnson</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Cross2021/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3505636 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2104.14722 target=_blank rel=noopener>
+arXiv
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://qiskit.github.io/openqasm/ target=_blank rel=noopener>
+URL
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
 <div class="grid-sizer col-lg-12 isotope-item pubtype-0 year-2021">
 <div class="media stream-item">
 <div class=media-body>
@@ -1518,48 +1564,6 @@ Cite
 DOI
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://www.isa-afp.org/entries/Isabelle_Marries_Dirac.html target=_blank rel=noopener>
-URL
-</a>
-</div>
-</div>
-<div class=ml-3>
-</div>
-</div>
-</div>
-<div class="grid-sizer col-lg-12 isotope-item pubtype-0 year-2021">
-<div class="media stream-item">
-<div class=media-body>
-<div class="section-subheading article-title mb-0 mt-0">
-<a href=/bib/publication/Cross2021/>OpenQASM 3: A broader and deeper quantum assembly language</a>
-</div>
-<a href=/bib/publication/Cross2021/ class=summary-link>
-<div class=article-style>
-Quantum assembly languages are machine-independent languages that traditionally describe quantum computation in the circuit model. Open …
-</div>
-</a>
-<div class="stream-meta article-metadata">
-<div>
-<span>
-<a href=/bib/author/Andrew-W.-Cross/>Andrew W. Cross</a></span>, <span>
-<a href=/bib/author/Ali-Javadi-Abhari/>Ali Javadi-Abhari</a></span>, <span>
-<a href=/bib/author/Thomas-Alexander/>Thomas Alexander</a></span>, <span>
-<a href=/bib/author/Niel-de-Beaudrap/>Niel de Beaudrap</a></span>, <span>
-<a href=/bib/author/Lev-S.-Bishop/>Lev S. Bishop</a></span>, <span>
-<a href=/bib/author/Steven-Heidel/>Steven Heidel</a></span>, <span>
-<a href=/bib/author/Colm-A.-Ryan/>Colm A. Ryan</a></span>, <span>
-<a href=/bib/author/John-Smolin/>John Smolin</a></span>, <span>
-<a href=/bib/author/Jay-M.-Gambetta/>Jay M. Gambetta</a></span>, <span>
-<a href=/bib/author/Blake-R.-Johnson/>Blake R. Johnson</a></span>
-</div>
-</div>
-<div class=btn-links>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Cross2021/cite.bib>
-Cite
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2104.14722 target=_blank rel=noopener>
-arXiv
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://qiskit.github.io/openqasm/ target=_blank rel=noopener>
 URL
 </a>
 </div>
