--- a/publication/Xu2022/index.html
+++ b/publication/Xu2022/index.html
@@ -188,7 +188,7 @@ Conference paper
 </div>
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
-<div class=article-style><p>PLDI &lsquo;22. Previously known as <a href=https://arxiv.org/abs/2111.11387 target=_blank rel=noopener>Quanto (arXiv:2111.11387)</a>.</p>
+<div class=article-style><p>PLDI &lsquo;22. The extended version on arXiv includes an additional appendix with detailed results. Previously known as <a href=https://arxiv.org/abs/2111.11387 target=_blank rel=noopener>Quanto (arXiv:2111.11387)</a>.</p>
 </div>
 <div class=article-tags>
 <a class="badge badge-light" href=/bib/tag/quantum-computing/>quantum computing</a>
