deploy: QuantumPL/site@1740b4b33ad782cf85f766da44d3997165c81232

--- a/publication/index.html
+++ b/publication/index.html
@@ -899,6 +899,36 @@ arXiv
 </div>
 </div>
 </div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-4 year-2021">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/QIRSpec2021/>QIR Specification</a>
+</div>
+<a href=/bib/publication/QIRSpec2021/ class=summary-link>
+<div class=article-style>
+The QIR specification is an effort of the QIR Alliance. It defines how to represent quantum programs within the LLVM IR.
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/QIR-Alliance/>QIR Alliance</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/QIRSpec2021/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/qir-alliance/qir-spec target=_blank rel=noopener>
+URL
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
 <div class="grid-sizer col-lg-12 isotope-item pubtype-0 year-2021">
 <div class="media stream-item">
 <div class=media-body>
