--- a/index.html
+++ b/index.html
@@ -220,43 +220,6 @@ URL
 <i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author">
 <span>
-<a href=/bib/author/Mingkuan-Xu/>Mingkuan Xu</a></span>, <span>
-<a href=/bib/author/Zikun-Li/>Zikun Li</a></span>, <span>
-<a href=/bib/author/Oded-Padon/>Oded Padon</a></span>, <span>
-<a href=/bib/author/Sina-Lin/>Sina Lin</a></span>, <span>
-<a href=/bib/author/Jessica-Pointing/>Jessica Pointing</a></span>, <span>
-<a href=/bib/author/Auguste-Hirth/>Auguste Hirth</a></span>, <span>
-<a href=/bib/author/Henry-Ma/>Henry Ma</a></span>, <span>
-<a href=/bib/author/Jens-Palsberg/>Jens Palsberg</a></span>, <span>
-<a href=/bib/author/Alex-Aiken/>Alex Aiken</a></span>, <span>
-<a href=/bib/author/Umut-A.-Acar/>Umut A. Acar</a></span>, <span>
-<a href=/bib/author/Zhihao-Jia/>Zhihao Jia</a></span>
-</span>
-(2022).
-<a href=/bib/publication/Xu2022/>Quartz: Superoptimization of Quantum Circuits</a>.
-<em>Proceedings of the 43rd ACM SIGPLAN International Conference on Programming Language Design and Implementation</em>.
-<p>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://theory.stanford.edu/~aiken/publications/papers/pldi22b.pdf target=_blank rel=noopener>
-PDF
-</a>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Xu2022/cite.bib>
-Cite
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3519939.3523433 target=_blank rel=noopener>
-DOI
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2204.09033 target=_blank rel=noopener>
-arXiv
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/quantum-compiler/quartz target=_blank rel=noopener>
-URL
-</a>
-</p>
-</div>
-<div class=pub-list-item style=margin-bottom:1rem>
-<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
-<span class="article-metadata li-cite-author">
-<span>
 <a href=/bib/author/Yuxiang-Peng/>Yuxiang Peng</a></span>, <span>
 <a href=/bib/author/Mingsheng-Ying/>Mingsheng Ying</a></span>, <span>
 <a href=/bib/author/Xiaodi-Wu/>Xiaodi Wu</a></span>
@@ -272,6 +235,34 @@ Cite
 DOI
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2110.07018 target=_blank rel=noopener>
+arXiv
+</a>
+</p>
+</div>
+<div class=pub-list-item style=margin-bottom:1rem>
+<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author">
+<span>
+<a href=/bib/author/Runzhou-Tao/>Runzhou Tao</a></span>, <span>
+<a href=/bib/author/Yunong-Shi/>Yunong Shi</a></span>, <span>
+<a href=/bib/author/Jianan-Yao/>Jianan Yao</a></span>, <span>
+<a href=/bib/author/Xupeng-Li/>Xupeng Li</a></span>, <span>
+<a href=/bib/author/Ali-Javadi-Abhari/>Ali Javadi-Abhari</a></span>, <span>
+<a href=/bib/author/Andrew-W.-Cross/>Andrew W. Cross</a></span>, <span>
+<a href=/bib/author/Frederic-T.-Chong/>Frederic T. Chong</a></span>, <span>
+<a href=/bib/author/Ronghui-Gu/>Ronghui Gu</a></span>
+</span>
+(2022).
+<a href=/bib/publication/Tao2022/>Giallar: Push-Button Verification for the Qiskit Quantum Compiler</a>.
+<em>Proceedings of the 43rd ACM SIGPLAN International Conference on Programming Language Design and Implementation</em>.
+<p>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Tao2022/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3519939.3523431 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2205.00661 target=_blank rel=noopener>
 arXiv
 </a>
 </p>
