deploy: QuantumPL/site@d066b43b8d07fb3935e5c4a2beae7313c34bd523

--- a/publication/index.html
+++ b/publication/index.html
@@ -913,7 +913,7 @@ The QIR specification is an effort of the QIR Alliance. It defines how to repres
 <div class="stream-meta article-metadata">
 <div>
 <span>
-<a href=/bib/author/QIR-Alliance/>QIR Alliance</a></span>
+<a href=/bib/author/QIR-Alliance/>{QIR Alliance}</a></span>
 </div>
 </div>
 <div class=btn-links>
@@ -2004,6 +2004,36 @@ This work is an effort to formalise some quantum algorithms and results in quant
 Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://isa-afp.org/entries/Isabelle_Marries_Dirac.html target=_blank rel=noopener>
+URL
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-4 year-2020">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/QsSpec2020/>Q# Language Specification</a>
+</div>
+<a href=/bib/publication/QsSpec2020/ class=summary-link>
+<div class=article-style>
+Q# is part of Microsoft&rsquo;s Quantum Development Kit and provides rich IDE support and tools for program visualization and analysis. …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Microsoft/>{Microsoft}</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/QsSpec2020/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/microsoft/qsharp-language/tree/main/Specifications/Language#q-language target=_blank rel=noopener>
 URL
 </a>
 </div>
