--- a/publication-type/4/index.html
+++ b/publication-type/4/index.html
@@ -128,6 +128,12 @@ The QIR specification is an effort of the QIR Alliance. It defines how to repres
 </div>
 </div>
 <div>
+<h2><a href=/bib/publication/QsSpec2020/>Q# Language Specification</a></h2>
+<div class=article-style>
+Q# is part of Microsoft's Quantum Development Kit and provides rich IDE support and tools for program visualization and analysis. Our goal is to support the development of future large-scale applications while supporting user's first efforts in that …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/JavadiAbhari2012/>Scaffold: Quantum Programming Language</a></h2>
 <div class=article-style>
 Quantum computing is of significant research interest because of its potential to radically alter the performance and asymptotic complexity of certain computations. Over the years, physicists have explored possibilities for how to implement quantum …
