deploy: QuantumPL/site@adf9d8e3c044509fb5eae72318239ff1bff2f6ff

--- a/publication/Yan2022/index.html
+++ b/publication/Yan2022/index.html
@@ -139,6 +139,9 @@ Cite
 <a class="btn btn-outline-primary btn-page-header" href=https://doi.org/10.1145/3527316 target=_blank rel=noopener>
 DOI
 </a>
+<a class="btn btn-outline-primary btn-page-header" href=https://hrjiang.github.io/ilq/ target=_blank rel=noopener>
+URL
+</a>
 </div>
 </div>
 <div class=article-container>
@@ -171,7 +174,7 @@ Journal article
 </div>
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
-<div class=article-style><p>OOPSLA &lsquo;22</p>
+<div class=article-style><p>OOPSLA &lsquo;22. Also see the URL for the extended technical report.</p>
 </div>
 <div class=article-tags>
 <a class="badge badge-light" href=/bib/tag/quantum-programming-languages/>quantum programming languages</a>
