--- a/publication/index.html
+++ b/publication/index.html
@@ -505,6 +505,9 @@ Cite
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3527316 target=_blank rel=noopener>
 DOI
 </a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://hrjiang.github.io/ilq/ target=_blank rel=noopener>
+URL
+</a>
 </div>
 </div>
 <div class=ml-3>
