deploy: QuantumPL/site@9753a15b58e73a7ac9a532aef8b44ae4a4e58bda

--- a/publication/Singhal2021/index.html
+++ b/publication/Singhal2021/index.html
@@ -165,7 +165,7 @@ Conference paper
 <div class=col-md-10>
 <div class=row>
 <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-<div class="col-12 col-md-9"><em>Informal Proceedings of the Second International Workshop on Programming Languages for Quantum Computing (PLanQC &lsquo;21)</em></div>
+<div class="col-12 col-md-9"><em>Second International Workshop on Programming Languages for Quantum Computing (PLanQC &lsquo;21)</em></div>
 </div>
 </div>
 <div class=col-md-1></div>
