--- a/publication/Singhal2020/index.html
+++ b/publication/Singhal2020/index.html
@@ -164,7 +164,7 @@ Conference paper
 <div class=col-md-10>
 <div class=row>
 <div class="col-12 col-md-3 pub-row-heading">Publication</div>
-<div class="col-12 col-md-9"><em>Informal Proceedings of the First International Workshop on Programming Languages for Quantum Computing (PLanQC &lsquo;20)</em></div>
+<div class="col-12 col-md-9"><em>First International Workshop on Programming Languages for Quantum Computing (PLanQC &lsquo;20)</em></div>
 </div>
 </div>
 <div class=col-md-1></div>
