deploy: QuantumPL/site@5d295040389013516073b86677781489e9c2efe0

--- a/publication/Bordg2020/index.html
+++ b/publication/Bordg2020/index.html
@@ -171,7 +171,7 @@ Software
 </div>
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
-<div class=article-style><p>Formal proof development in Isabelle. Supplement to [<a href=../Bordg2021>Bordg2021</a>]</p>
+<div class=article-style><p>Formal proof development in Isabelle. Supplement to [<a href=../Bordg2020a>Bordg2020a</a>]</p>
 </div>
 </div>
 </div>
