deploy: QuantumPL/site@f223c46585e050fd1d3e1c731c6ece8e409546e5

--- a/publication/Amy2019/index.html
+++ b/publication/Amy2019/index.html
@@ -170,6 +170,16 @@ Conference paper
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
 <div class=article-style></div>
+<div class=article-tags>
+<a class="badge badge-light" href=/bib/tag/sum-over-paths/>sum-over-paths</a>
+</div>
+<div class="article-widget content-widget-hr">
+<h3>Related</h3>
+<ul>
+<li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
+<li><a href=/bib/publication/Chareton2021/>An Automated Deductive Verification Framework for Circuit-Building Quantum Programs</a></li>
+</ul>
+</div>
 </div>
 </div>
 </div>
