--- a/publication/Amy2019a/index.html
+++ b/publication/Amy2019a/index.html
@@ -167,6 +167,7 @@ Thesis
 <a class="badge badge-light" href=/bib/tag/quantum-circuits/>quantum circuits</a>
 <a class="badge badge-light" href=/bib/tag/compiler-optimization/>compiler optimization</a>
 <a class="badge badge-light" href=/bib/tag/formal-verification/>formal verification</a>
+<a class="badge badge-light" href=/bib/tag/sum-over-paths/>sum-over-paths</a>
 </div>
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
