--- a/publication/Chareton2021/index.html
+++ b/publication/Chareton2021/index.html
@@ -182,15 +182,16 @@ Conference paper
 <a class="badge badge-light" href=/bib/tag/deductive-verification/>deductive verification</a>
 <a class="badge badge-light" href=/bib/tag/quantum-programming/>quantum programming</a>
 <a class="badge badge-light" href=/bib/tag/quantum-circuits/>quantum circuits</a>
+<a class="badge badge-light" href=/bib/tag/sum-over-paths/>sum-over-paths</a>
 </div>
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
 <li><a href=/bib/publication/Yuan2022/>Twist: Sound Reasoning for Purity and Entanglement in Quantum Programs</a></li>
 <li><a href=/bib/publication/Feng2021/>Quantum Hoare Logic with Classical Variables</a></li>
 <li><a href=/bib/publication/Ying2021a/>A proof system for disjoint parallel quantum programs</a></li>
 <li><a href=/bib/publication/Amy2019b/>Sized Types for Low-Level Quantum Metaprogramming</a></li>
-<li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
 </ul>
 </div>
 </div>
