deploy: QuantumPL/site@8c075e4205ed2564307332158e42ad965db3817e

--- a/publication/Abramsky2008/index.html
+++ b/publication/Abramsky2008/index.html
@@ -193,8 +193,8 @@ Book section
 <li><a href=/bib/publication/Abramsky2004/>A Categorical Semantics of Quantum Protocols</a></li>
 <li><a href=/bib/publication/Altenkirch2005/>A Functional Quantum Programming Language</a></li>
 <li><a href=/bib/publication/Unruh2019a/>Quantum Hoare Logic with Ghost Variables</a></li>
+<li><a href=/bib/publication/Cross2022/>OpenQASM 3: A Broader and Deeper Quantum Assembly Language</a></li>
 <li><a href=/bib/publication/Singhal2022/>Q# as a Quantum Algorithmic Language</a></li>
-<li><a href=/bib/publication/Tao2022/>Giallar: Push-Button Verification for the Qiskit Quantum Compiler</a></li>
 </ul>
 </div>
 </div>
