--- a/404.html
+++ b/404.html
@@ -124,6 +124,7 @@
 <h2>Latest</h2>
 <ul>
 <li><a href=/bib/publication/>Publications</a></li>
+<li><a href=/bib/publication/Cross2022/>OpenQASM 3: A Broader and Deeper Quantum Assembly Language</a></li>
 <li><a href=/bib/publication/LaRose2022/>Mitiq: A software package for error mitigation on noisy quantum computers</a></li>
 <li><a href=/bib/publication/Ittah2022/>QIRO: A Static Single Assignment-Based Quantum Program Representation for Optimization</a></li>
 <li><a href=/bib/publication/Hietala2022/>A Verified Software Toolchain For Quantum Programming</a></li>
@@ -132,7 +133,6 @@
 <li><a href=/bib/event/pldi22-sigplan/>Quantum at the SIGPLAN Track at PLDI 2022</a></li>
 <li><a href=/bib/event/pldi22/>Quantum at PLDI 2022</a></li>
 <li><a href=/bib/publication/Xu2022/>Quartz: Superoptimization of Quantum Circuits</a></li>
-<li><a href=/bib/publication/Tao2022/>Giallar: Push-Button Verification for the Qiskit Quantum Compiler</a></li>
 </ul>
 </div>
 </div>
