--- a/publication/Gay2005/index.html
+++ b/publication/Gay2005/index.html
@@ -192,8 +192,8 @@ Conference paper
 <li><a href=/bib/publication/Le2022/>A Quantum Interpretation of Separating Conjunction for Local Reasoning of Quantum Programs Based on Separation Logic</a></li>
 <li><a href=/bib/publication/Mosca2019/>Quantum Programming Languages (Dagstuhl Seminar 18381)</a></li>
 <li><a href=/bib/publication/Unruh2019a/>Quantum Hoare Logic with Ghost Variables</a></li>
+<li><a href=/bib/publication/Cross2022/>OpenQASM 3: A Broader and Deeper Quantum Assembly Language</a></li>
 <li><a href=/bib/publication/Singhal2022/>Q# as a Quantum Algorithmic Language</a></li>
-<li><a href=/bib/publication/Tao2022/>Giallar: Push-Button Verification for the Qiskit Quantum Compiler</a></li>
 </ul>
 </div>
 </div>
