--- a/publication/Li2020/index.html
+++ b/publication/Li2020/index.html
@@ -187,9 +187,9 @@ Journal article
 <ul>
 <li><a href=/bib/publication/Heim2020/>Development of Quantum Applications</a></li>
 <li><a href=/bib/publication/McCaskey2021/>Extending C++ for Heterogeneous Quantum-Classical Computing</a></li>
+<li><a href=/bib/publication/Cross2022/>OpenQASM 3: A Broader and Deeper Quantum Assembly Language</a></li>
 <li><a href=/bib/publication/Singhal2022/>Q# as a Quantum Algorithmic Language</a></li>
 <li><a href=/bib/publication/Tao2022/>Giallar: Push-Button Verification for the Qiskit Quantum Compiler</a></li>
-<li><a href=/bib/publication/Xu2022/>Quartz: Superoptimization of Quantum Circuits</a></li>
 </ul>
 </div>
 </div>
