deploy: QuantumPL/site@6c5bdd15ee69cf2a708929f91011e937e54568ff

--- a/index.html
+++ b/index.html
@@ -192,6 +192,51 @@ URL
 <i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author">
 <span>
+<a href=/bib/author/Charles-Yuan/>Charles Yuan</a></span>, <span>
+<a href=/bib/author/Michael-Carbin/>Michael Carbin</a></span>
+</span>
+(2022).
+<a href=/bib/publication/Yuan2022a/>Tower: Data Structures in Quantum Superposition</a>.
+<em>Proceedings of the ACM on Programming Languages</em>.
+<p>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Yuan2022a/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3563297 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2205.10255 target=_blank rel=noopener>
+arXiv
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/psg-mit/tower-oopsla22 target=_blank rel=noopener>
+URL
+</a>
+</p>
+</div>
+<div class=pub-list-item style=margin-bottom:1rem>
+<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author">
+<span>
+<a href=/bib/author/Peng-Fu/>Peng Fu</a></span>, <span>
+<a href=/bib/author/Kohei-Kishida/>Kohei Kishida</a></span>, <span>
+<a href=/bib/author/Peter-Selinger/>Peter Selinger</a></span>
+</span>
+(2022).
+<a href=/bib/publication/Fu2022b/>Linear Dependent Type Theory for Quantum Programming Languages</a>.
+<em>Logical Methods in Computer Science</em>.
+<p>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Fu2022b/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.46298/lmcs-18%283:28%292022 target=_blank rel=noopener>
+DOI
+</a>
+</p>
+</div>
+<div class=pub-list-item style=margin-bottom:1rem>
+<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
+<span class="article-metadata li-cite-author">
+<span>
 <a href=/bib/author/Ryan-LaRose/>Ryan LaRose</a></span>, <span>
 <a href=/bib/author/Andrea-Mari/>Andrea Mari</a></span>, <span>
 <a href=/bib/author/Sarah-Kaiser/>Sarah Kaiser</a></span>, <span>
@@ -231,23 +276,6 @@ URL
 <i class="far fa-file-alt pub-icon" aria-hidden=true></i>
 <span class="article-metadata li-cite-author">
 <span>
-<a href=/bib/author/Kesha-Hietala/>Kesha Hietala</a></span>
-</span>
-(2022).
-<a href=/bib/publication/Hietala2022/>A Verified Software Toolchain For Quantum Programming</a>.
-<p>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://khieta.github.io/files/dissertation.pdf target=_blank rel=noopener>
-PDF
-</a>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Hietala2022/cite.bib>
-Cite
-</a>
-</p>
-</div>
-<div class=pub-list-item style=margin-bottom:1rem>
-<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
-<span class="article-metadata li-cite-author">
-<span>
 <a href=/bib/author/David-Ittah/>David Ittah</a></span>, <span>
 <a href=/bib/author/Thomas-Haner/>Thomas Häner</a></span>, <span>
 <a href=/bib/author/Vadym-Kliuchnikov/>Vadym Kliuchnikov</a></span>, <span>
@@ -262,30 +290,6 @@ Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3491247 target=_blank rel=noopener>
 DOI
-</a>
-</p>
-</div>
-<div class=pub-list-item style=margin-bottom:1rem>
-<i class="far fa-file-alt pub-icon" aria-hidden=true></i>
-<span class="article-metadata li-cite-author">
-<span>
-<a href=/bib/author/Kartik-Singhal/>Kartik Singhal</a></span>, <span>
-<a href=/bib/author/Kesha-Hietala/>Kesha Hietala</a></span>, <span>
-<a href=/bib/author/Sarah-Marshall/>Sarah Marshall</a></span>, <span>
-<a href=/bib/author/Robert-Rand/>Robert Rand</a></span>
-</span>
-(2022).
-<a href=/bib/publication/Singhal2022/>Q# as a Quantum Algorithmic Language</a>.
-<em>Proceedings of the 19th International Conference on Quantum Physics and Logic (QPL), Oxford, U.K., June 27&ndash;July 1, 2022</em>.
-<p>
-<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Singhal2022/cite.bib>
-Cite
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2206.03532 target=_blank rel=noopener>
-arXiv
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://ks.cs.uchicago.edu/publication/q-algol/ target=_blank rel=noopener>
-URL
 </a>
 </p>
 </div>
@@ -383,14 +387,14 @@ So I decided to move the GitHub repo to its own organization and set up this Hug
 </div>
 <div class="col-12 col-lg-8">
 <div class=tag-cloud>
-<a href=/bib/tag/formal-verification/ style=font-size:.7999806129929897rem>formal verification</a>
-<a href=/bib/tag/hoare-logic/ style=font-size:1.0441807203389564rem>hoare logic</a>
-<a href=/bib/tag/programming-languages/ style=font-size:1.233597039263813rem>programming languages</a>
+<a href=/bib/tag/formal-verification/ style=font-size:.7rem>formal verification</a>
+<a href=/bib/tag/hoare-logic/ style=font-size:.9645458423313806rem>hoare logic</a>
+<a href=/bib/tag/programming-languages/ style=font-size:1.169743539358983rem>programming languages</a>
 <a href=/bib/tag/proto-quipper-m/ style=font-size:.7rem>proto-quipper-m</a>
-<a href=/bib/tag/quantum-computation/ style=font-size:1.233597039263813rem>quantum computation</a>
-<a href=/bib/tag/quantum-computing/ style=font-size:1.9767422683628353rem>quantum computing</a>
-<a href=/bib/tag/quantum-programming/ style=font-size:1.1121253011032501rem>quantum programming</a>
-<a href=/bib/tag/quantum-programming-languages/ style=font-size:.970320756038437rem>quantum programming languages</a>
+<a href=/bib/tag/quantum-computation/ style=font-size:1.169743539358983rem>quantum computation</a>
+<a href=/bib/tag/quantum-computing/ style=font-size:1.9748045311136815rem>quantum computing</a>
+<a href=/bib/tag/quantum-programming/ style=font-size:1.1062992755339043rem>quantum programming</a>
+<a href=/bib/tag/quantum-programming-languages/ style=font-size:.9645458423313806rem>quantum programming languages</a>
 </div>
 </div>
 </div>
