--- a/publication-type/2/index.html
+++ b/publication-type/2/index.html
@@ -122,9 +122,21 @@
 </div>
 <div class=universal-wrapper>
 <div>
+<h2><a href=/bib/publication/Fu2022b/>Linear Dependent Type Theory for Quantum Programming Languages</a></h2>
+<div class=article-style>
+Modern quantum programming languages integrate quantum resources and classical control. They must, on the one hand, be linearly typed to reflect the no-cloning property of quantum resources. On the other hand, high-level and practical languages …
+</div>
+</div>
+<div>
 <h2><a href=/bib/publication/Cross2022/>OpenQASM 3: A Broader and Deeper Quantum Assembly Language</a></h2>
 <div class=article-style>
 Quantum assembly languages are machine-independent languages that traditionally describe quantum computation in the circuit model. Open quantum assembly language (OpenQASM 2) was proposed as an imperative programming language for quantum circuits …
+</div>
+</div>
+<div>
+<h2><a href=/bib/publication/Yuan2022a/>Tower: Data Structures in Quantum Superposition</a></h2>
+<div class=article-style>
+Emerging quantum algorithms for problems such as element distinctness, subset sum, and closest pair demonstrate computational advantages by relying on abstract data structures. Practically realizing such an algorithm as a program for a quantum …
 </div>
 </div>
 <div>
