--- a/publication/Fu2020/index.html
+++ b/publication/Fu2020/index.html
@@ -142,9 +142,6 @@ Cite
 <a class="btn btn-outline-primary btn-page-header" href=https://doi.org/10.1145/3373718.3394765 target=_blank rel=noopener>
 DOI
 </a>
-<a class="btn btn-outline-primary btn-page-header" href=https://arxiv.org/abs/2004.13472 target=_blank rel=noopener>
-arXiv
-</a>
 </div>
 </div>
 <div class=article-container>
@@ -177,7 +174,7 @@ Conference paper
 </div>
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
-<div class=article-style><p>LICS &lsquo;20.</p>
+<div class=article-style><p>LICS &lsquo;20. See expanded version at [<a href=../Fu2022b>Fu2022b</a>]</p>
 </div>
 <div class=article-tags>
 <a class="badge badge-light" href=/bib/tag/proto-quipper-d/>proto-quipper-d</a>
@@ -190,11 +187,11 @@ Conference paper
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/bib/publication/Fu2022b/>Linear Dependent Type Theory for Quantum Programming Languages</a></li>
 <li><a href=/bib/publication/Fu2020a/>A Tutorial Introduction to Quantum Circuit Programming in Dependently Typed Proto-Quipper</a></li>
 <li><a href=/bib/publication/Rios2021/>On a Categorically Sound Quantum Programming Language for Circuit Description</a></li>
 <li><a href=/bib/publication/Fu2022/>Proto-Quipper with dynamic lifting</a></li>
 <li><a href=/bib/publication/Colledan2022/>On Dynamic Lifting and Effect Typing in Circuit Description Languages (Extended Version)</a></li>
-<li><a href=/bib/publication/Lee2021/>Concrete Categorical Model of a Quantum Circuit Description Language with Measurement</a></li>
 </ul>
 </div>
 </div>
