--- a/publication/Green2010/index.html
+++ b/publication/Green2010/index.html
@@ -172,10 +172,10 @@ Thesis
 <h3>Related</h3>
 <ul>
 <li><a href=/bib/publication/Heim2020/>Development of Quantum Applications</a></li>
+<li><a href=/bib/publication/Yuan2022a/>Tower: Data Structures in Quantum Superposition</a></li>
 <li><a href=/bib/publication/Yuan2022/>Twist: Sound Reasoning for Purity and Entanglement in Quantum Programs</a></li>
 <li><a href=/bib/publication/Feng2021/>Quantum Hoare Logic with Classical Variables</a></li>
 <li><a href=/bib/publication/Ying2021a/>A proof system for disjoint parallel quantum programs</a></li>
-<li><a href=/bib/publication/Amy2019b/>Sized Types for Low-Level Quantum Metaprogramming</a></li>
 </ul>
 </div>
 </div>
