--- a/publication/Pagani2014/index.html
+++ b/publication/Pagani2014/index.html
@@ -187,10 +187,10 @@ Conference paper
 <h3>Related</h3>
 <ul>
 <li><a href=/bib/publication/Vizzotto2009/>The Arrow Calculus as a Quantum Programming Language</a></li>
+<li><a href=/bib/publication/Fu2022b/>Linear Dependent Type Theory for Quantum Programming Languages</a></li>
 <li><a href=/bib/publication/Singhal2022/>Q# as a Quantum Algorithmic Language</a></li>
 <li><a href=/bib/publication/Heunen2022/>Quantum Information Effects</a></li>
 <li><a href=/bib/publication/Ying2012/>Floyd--Hoare Logic for Quantum Programs</a></li>
-<li><a href=/bib/publication/Svore2018/>Q#: Enabling Scalable Quantum Computing and Development with a High-Level DSL</a></li>
 </ul>
 </div>
 </div>
