--- a/publication/Rios2021/index.html
+++ b/publication/Rios2021/index.html
@@ -175,10 +175,10 @@ Thesis
 <h3>Related</h3>
 <ul>
 <li><a href=/bib/publication/Fu2020/>Linear Dependent Type Theory for Quantum Programming Languages: Extended Abstract</a></li>
+<li><a href=/bib/publication/Fu2022b/>Linear Dependent Type Theory for Quantum Programming Languages</a></li>
 <li><a href=/bib/publication/Fu2022/>Proto-Quipper with dynamic lifting</a></li>
 <li><a href=/bib/publication/Amy2019a/>Formal Methods in Quantum Circuit Design</a></li>
 <li><a href=/bib/publication/Rios2018/>A Categorical Model for a Quantum Circuit Description Language (Extended Abstract)</a></li>
-<li><a href=/bib/publication/Lindenhovius2018/>Enriching a Linear/Non-Linear Lambda Calculus: A Programming Language for String Diagrams</a></li>
 </ul>
 </div>
 </div>
