--- a/publication/index.html
+++ b/publication/index.html
@@ -197,6 +197,43 @@ Software
 <div class="media stream-item">
 <div class=media-body>
 <div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Yuan2022a/>Tower: Data Structures in Quantum Superposition</a>
+</div>
+<a href=/bib/publication/Yuan2022a/ class=summary-link>
+<div class=article-style>
+Emerging quantum algorithms for problems such as element distinctness, subset sum, and closest pair demonstrate computational …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Charles-Yuan/>Charles Yuan</a></span>, <span>
+<a href=/bib/author/Michael-Carbin/>Michael Carbin</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Yuan2022a/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3563297 target=_blank rel=noopener>
+DOI
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2205.10255 target=_blank rel=noopener>
+arXiv
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://github.com/psg-mit/tower-oopsla22 target=_blank rel=noopener>
+URL
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2022">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
 <a href=/bib/publication/Cross2022/>OpenQASM 3: A Broader and Deeper Quantum Assembly Language</a>
 </div>
 <a href=/bib/publication/Cross2022/ class=summary-link>
@@ -232,6 +269,38 @@ arXiv
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://openqasm.com/ target=_blank rel=noopener>
 URL
+</a>
+</div>
+</div>
+<div class=ml-3>
+</div>
+</div>
+</div>
+<div class="grid-sizer col-lg-12 isotope-item pubtype-2 year-2022">
+<div class="media stream-item">
+<div class=media-body>
+<div class="section-subheading article-title mb-0 mt-0">
+<a href=/bib/publication/Fu2022b/>Linear Dependent Type Theory for Quantum Programming Languages</a>
+</div>
+<a href=/bib/publication/Fu2022b/ class=summary-link>
+<div class=article-style>
+Modern quantum programming languages integrate quantum resources and classical control. They must, on the one hand, be linearly typed …
+</div>
+</a>
+<div class="stream-meta article-metadata">
+<div>
+<span>
+<a href=/bib/author/Peng-Fu/>Peng Fu</a></span>, <span>
+<a href=/bib/author/Kohei-Kishida/>Kohei Kishida</a></span>, <span>
+<a href=/bib/author/Peter-Selinger/>Peter Selinger</a></span>
+</div>
+</div>
+<div class=btn-links>
+<a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Fu2022b/cite.bib>
+Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.46298/lmcs-18%283:28%292022 target=_blank rel=noopener>
+DOI
 </a>
 </div>
 </div>
@@ -2151,9 +2220,6 @@ Cite
 </a>
 <a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.1145/3373718.3394765 target=_blank rel=noopener>
 DOI
-</a>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://arxiv.org/abs/2004.13472 target=_blank rel=noopener>
-arXiv
 </a>
 </div>
 </div>
