--- a/publication/Ying2021a/index.html
+++ b/publication/Ying2021a/index.html
@@ -186,9 +186,9 @@ Journal article
 <ul>
 <li><a href=/bib/publication/Yuan2022/>Twist: Sound Reasoning for Purity and Entanglement in Quantum Programs</a></li>
 <li><a href=/bib/publication/Feng2021/>Quantum Hoare Logic with Classical Variables</a></li>
+<li><a href=/bib/publication/Yuan2022a/>Tower: Data Structures in Quantum Superposition</a></li>
 <li><a href=/bib/publication/Peng2022/>Algebraic Reasoning of Quantum Programs via Non-Idempotent Kleene Algebra</a></li>
 <li><a href=/bib/publication/Amy2019b/>Sized Types for Low-Level Quantum Metaprogramming</a></li>
-<li><a href=/bib/publication/Singhal2021a/>Quantum Hoare Type Theory: Extended Abstract</a></li>
 </ul>
 </div>
 </div>
