deploy: QuantumPL/site@2a310eebc43f5a504f807ea6e2e57af04de67e8e

--- a/publication/Abramsky2008/index.html
+++ b/publication/Abramsky2008/index.html
@@ -194,7 +194,7 @@ Book section
 <li><a href=/bib/publication/Altenkirch2005/>A Functional Quantum Programming Language</a></li>
 <li><a href=/bib/publication/Unruh2019a/>Quantum Hoare Logic with Ghost Variables</a></li>
 <li><a href=/bib/publication/Cross2022/>OpenQASM 3: A Broader and Deeper Quantum Assembly Language</a></li>
-<li><a href=/bib/publication/Singhal2022/>Q# as a Quantum Algorithmic Language</a></li>
+<li><a href=/bib/publication/Hietala2022/>A Verified Software Toolchain For Quantum Programming</a></li>
 </ul>
 </div>
 </div>
