--- a/publication/Hietala2021/index.html
+++ b/publication/Hietala2021/index.html
@@ -192,10 +192,10 @@ Journal article
 <h3>Related</h3>
 <ul>
 <li><a href=/bib/publication/Rand2019a/>Formal Verification vs. Quantum Uncertainty</a></li>
+<li><a href=/bib/publication/Hietala2022/>A Verified Software Toolchain For Quantum Programming</a></li>
 <li><a href=/bib/publication/Singhal2021a/>Quantum Hoare Type Theory: Extended Abstract</a></li>
 <li><a href=/bib/publication/Singhal2020/>Verified translation between low-level quantum languages</a></li>
 <li><a href=/bib/publication/Singhal2020a/>Quantum Hoare Type Theory</a></li>
-<li><a href=/bib/publication/Singhal2022/>Q# as a Quantum Algorithmic Language</a></li>
 </ul>
 </div>
 </div>
