--- a/publication/Hietala2022/index.html
+++ b/publication/Hietala2022/index.html
@@ -134,11 +134,11 @@ July 2022
 <i class="fas fa-folder mr-1"></i><a href=/bib/category/PhD-Thesis/>PhD Thesis</a></span>
 </div>
 <div class="btn-links mb-3">
-<a class="btn btn-outline-primary btn-page-header" href=https://khieta.github.io/files/dissertation.pdf target=_blank rel=noopener>
-PDF
-</a>
 <a href=# class="btn btn-outline-primary btn-page-header js-cite-modal" data-filename=/bib/publication/Hietala2022/cite.bib>
 Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header" href=https://doi.org/10.13016/3el9-osue target=_blank rel=noopener>
+DOI
 </a>
 </div>
 </div>
@@ -162,6 +162,22 @@ Thesis
 <div class="d-md-none space-below"></div>
 <div class=space-below></div>
 <div class=article-style></div>
+<div class=article-tags>
+<a class="badge badge-light" href=/bib/tag/compilers/>compilers</a>
+<a class="badge badge-light" href=/bib/tag/formal-verification/>formal verification</a>
+<a class="badge badge-light" href=/bib/tag/programming-languages/>programming languages</a>
+<a class="badge badge-light" href=/bib/tag/quantum-computing/>quantum computing</a>
+</div>
+<div class="article-widget content-widget-hr">
+<h3>Related</h3>
+<ul>
+<li><a href=/bib/publication/Singhal2021a/>Quantum Hoare Type Theory: Extended Abstract</a></li>
+<li><a href=/bib/publication/Singhal2020/>Verified translation between low-level quantum languages</a></li>
+<li><a href=/bib/publication/Hietala2021/>A Verified Optimizer for Quantum Circuits</a></li>
+<li><a href=/bib/publication/Singhal2020a/>Quantum Hoare Type Theory</a></li>
+<li><a href=/bib/publication/Rand2019a/>Formal Verification vs. Quantum Uncertainty</a></li>
+</ul>
+</div>
 </div>
 </div>
 </div>
