--- a/publication/Huot2019a/index.html
+++ b/publication/Huot2019a/index.html
@@ -190,7 +190,7 @@ Conference paper
 <li><a href=/bib/publication/Heunen2019/>Categories for Quantum Theory: An Introduction</a></li>
 <li><a href=/bib/publication/Huot2019/>Universal Properties in Quantum Theory</a></li>
 <li><a href=/bib/publication/Cross2022/>OpenQASM 3: A Broader and Deeper Quantum Assembly Language</a></li>
-<li><a href=/bib/publication/Singhal2022/>Q# as a Quantum Algorithmic Language</a></li>
+<li><a href=/bib/publication/Hietala2022/>A Verified Software Toolchain For Quantum Programming</a></li>
 </ul>
 </div>
 </div>
