--- a/publication/Li2020/index.html
+++ b/publication/Li2020/index.html
@@ -189,7 +189,7 @@ Journal article
 <li><a href=/bib/publication/McCaskey2021/>Extending C++ for Heterogeneous Quantum-Classical Computing</a></li>
 <li><a href=/bib/publication/Cross2022/>OpenQASM 3: A Broader and Deeper Quantum Assembly Language</a></li>
 <li><a href=/bib/publication/Yuan2022a/>Tower: Data Structures in Quantum Superposition</a></li>
-<li><a href=/bib/publication/Singhal2022/>Q# as a Quantum Algorithmic Language</a></li>
+<li><a href=/bib/publication/Hietala2022/>A Verified Software Toolchain For Quantum Programming</a></li>
 </ul>
 </div>
 </div>
