--- a/publication/Singhal2022/index.html
+++ b/publication/Singhal2022/index.html
@@ -195,7 +195,7 @@ Conference paper
 <li><a href=/bib/publication/Singhal2020a/>Quantum Hoare Type Theory</a></li>
 <li><a href=/bib/publication/Singhal2021a/>Quantum Hoare Type Theory: Extended Abstract</a></li>
 <li><a href=/bib/publication/Heim2020/>Development of Quantum Applications</a></li>
-<li><a href=/bib/publication/Rand2021/>Gottesman Types for Quantum Programs</a></li>
+<li><a href=/bib/publication/Hietala2022/>A Verified Software Toolchain For Quantum Programming</a></li>
 </ul>
 </div>
 </div>
