--- a/publication/Unruh2019/index.html
+++ b/publication/Unruh2019/index.html
@@ -185,8 +185,8 @@ Journal article
 <li><a href=/bib/publication/Li2021/>Quantum Relational Hoare Logic with Expectations</a></li>
 <li><a href=/bib/publication/Singhal2021a/>Quantum Hoare Type Theory: Extended Abstract</a></li>
 <li><a href=/bib/publication/Singhal2020a/>Quantum Hoare Type Theory</a></li>
+<li><a href=/bib/publication/Hietala2022/>A Verified Software Toolchain For Quantum Programming</a></li>
 <li><a href=/bib/publication/Feng2021/>Quantum Hoare Logic with Classical Variables</a></li>
-<li><a href=/bib/publication/Ying2021a/>A proof system for disjoint parallel quantum programs</a></li>
 </ul>
 </div>
 </div>
