--- a/publication/index.html
+++ b/publication/index.html
@@ -410,11 +410,11 @@ Quantum computing is steadily moving from theory into practice, with small-scale
 </div>
 </div>
 <div class=btn-links>
-<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://khieta.github.io/files/dissertation.pdf target=_blank rel=noopener>
-PDF
-</a>
 <a href=# class="btn btn-outline-primary btn-page-header btn-sm js-cite-modal" data-filename=/bib/publication/Hietala2022/cite.bib>
 Cite
+</a>
+<a class="btn btn-outline-primary btn-page-header btn-sm" href=https://doi.org/10.13016/3el9-osue target=_blank rel=noopener>
+DOI
 </a>
 </div>
 </div>
