--- a/publication/Amy2019a/index.html
+++ b/publication/Amy2019a/index.html
@@ -172,11 +172,11 @@ Thesis
 <div class="article-widget content-widget-hr">
 <h3>Related</h3>
 <ul>
+<li><a href=/bib/publication/Hietala2022/>A Verified Software Toolchain For Quantum Programming</a></li>
 <li><a href=/bib/publication/Rios2021/>On a Categorically Sound Quantum Programming Language for Circuit Description</a></li>
 <li><a href=/bib/publication/Singhal2021a/>Quantum Hoare Type Theory: Extended Abstract</a></li>
 <li><a href=/bib/publication/Singhal2020/>Verified translation between low-level quantum languages</a></li>
 <li><a href=/bib/publication/Hietala2021a/>Proving Quantum Programs Correct</a></li>
-<li><a href=/bib/publication/Hietala2021/>A Verified Optimizer for Quantum Circuits</a></li>
 </ul>
 </div>
 </div>
