--- a/publication/Heim2020/index.html
+++ b/publication/Heim2020/index.html
@@ -173,9 +173,9 @@ Thesis
 <ul>
 <li><a href=/bib/publication/Singhal2022/>Q# as a Quantum Algorithmic Language</a></li>
 <li><a href=/bib/publication/Singhal2021/>Toward a Type-Theoretic Interpretation of Q# and Statically Enforcing the No-Cloning Theorem</a></li>
+<li><a href=/bib/publication/Hietala2022/>A Verified Software Toolchain For Quantum Programming</a></li>
 <li><a href=/bib/publication/Singhal2021a/>Quantum Hoare Type Theory: Extended Abstract</a></li>
 <li><a href=/bib/publication/Svore2018/>Q#: Enabling Scalable Quantum Computing and Development with a High-Level DSL</a></li>
-<li><a href=/bib/publication/Singhal2020/>Verified translation between low-level quantum languages</a></li>
 </ul>
 </div>
 </div>
