--- a/publication/Selinger2007/index.html
+++ b/publication/Selinger2007/index.html
@@ -186,8 +186,8 @@ Journal article
 <li><a href=/bib/publication/Rios2021/>On a Categorically Sound Quantum Programming Language for Circuit Description</a></li>
 <li><a href=/bib/publication/Fu2022b/>Linear Dependent Type Theory for Quantum Programming Languages</a></li>
 <li><a href=/bib/publication/Cross2022/>OpenQASM 3: A Broader and Deeper Quantum Assembly Language</a></li>
+<li><a href=/bib/publication/Hietala2022/>A Verified Software Toolchain For Quantum Programming</a></li>
 <li><a href=/bib/publication/Singhal2022/>Q# as a Quantum Algorithmic Language</a></li>
-<li><a href=/bib/publication/Tao2022/>Giallar: Push-Button Verification for the Qiskit Quantum Compiler</a></li>
 </ul>
 </div>
 </div>
