--- a/publication/Singhal2020/index.html
+++ b/publication/Singhal2020/index.html
@@ -189,7 +189,7 @@ Conference paper
 <li><a href=/bib/publication/Singhal2020a/>Quantum Hoare Type Theory</a></li>
 <li><a href=/bib/publication/Rand2019a/>Formal Verification vs. Quantum Uncertainty</a></li>
 <li><a href=/bib/publication/Cross2022/>OpenQASM 3: A Broader and Deeper Quantum Assembly Language</a></li>
-<li><a href=/bib/publication/Hietala2021/>A Verified Optimizer for Quantum Circuits</a></li>
+<li><a href=/bib/publication/Hietala2022/>A Verified Software Toolchain For Quantum Programming</a></li>
 </ul>
 </div>
 </div>
